<resources>
    <string name="app_name">MedUMinder</string>
    <string name="sign_up_here"><u>Sign Up here!</u></string>
    <string name="reset_password">Forgot password?</string>
    <string name="login_here"><u>Login here!</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
<string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">"Login successful"</string>
    <string name="greetings_consumer">"Don&apos;t forget to take your medicine!"</string>
    <string name="greetings_caregiver">"Please remind the Consumer to take their medicine!"</string>
    <string name="desc_kepatuhan_tinggi">"Your adherence this week is very good. Keep it up!"</string>
    <string name="desc_kepatuhan_okela">"Your adherence this week is quite good. Let&apos;s improve it!"</string>
    <string name="desc_kepatuhan_rendah">"Your adherence this week is very low. Let&apos;s improve it soon!"</string>
    <string name="alert_invite_consumer">"Connect with a consumer to monitor their medication adherence and receive notifications for missed medications."</string>
    <string name="alert_invite_caregiver">"Add a caregiver who can receive notifications and send medication reminders."</string>
    <string-array name="role_array">
        <item>Consumer</item>
        <item>Caregiver</item>
    </string-array>
    <string name="current_language">Current Language</string>
    <string name="language_options">Language Options</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesian</string>
    <string name="chinese">Chinese</string>
    <string name="profile">Profile</string>
    <string name="nama">Name</string>
    <string name="email">Email</string>
    <string name="googleAcc">Google Account</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="kepatuhan">Adherence Level</string>
    <string name="selengkapnya">See More</string>
    <string name="pengaturan">Settings</string>
    <string name="bahasa">Language</string>
    <string name="notifikasi">Notifications</string>
    <string name="activateCaregiver">Activate Caregiver</string>
    <string name="invCaregiver">Invite Caregiver</string>
    <string name="invConsumer">Invite Consumer</string>
    <string name="caregiverList">Caregiver List</string>
    <string name="consumerList">Consumer List</string>
    <string name="editProfile">Edit Profile</string>
    <string name="theme">Appearance</string>
    <string name="langSetting">Language Settings</string>
    <string name="currentLanguage">Current Language</string>
    <string name="langOption">Language Options</string>
    <string name="notifSetting">Notification Settings</string>
    <string name="ringtone">Ringtone</string>
    <string name="customMsg">Reminder Message Customization</string>
    <string name="reminderMsg">Reminder Message</string>
    <string name="time_to_consume_med">It is time to take medicine</string>
    <string name="jangan_lupa_minum_obat">Do not forget to take medication</string>
    <string name="waktunya_minum_obat">Time to take medicine</string>
    <string name="fiveMin">5 Minute</string>
    <string name="tenMin">10 Minute</string>
    <string name="thirtyMin">30 Minute</string>
    <string name="oneHour">1 Hour</string>
    <string name="twoHour">2 Hour</string>
    <string name="snoozeDuration">Snooze Duration</string>
    <string name="appointmentReminder">Appointment Reminder Time</string>
    <string name="remindMeBefore">Remind Me Before</string>
    <string name="remindUntilConfirm">Repeat Reminder Until Confirmed</string>
    <string name="jenisObat">Medicine Type</string>
    <string name="obatPil">Pill</string>
    <string name="obatCair">Liquid</string>
    <string name="stockObat">Medicine Stock</string>
    <string name="isiUlangObat">Refill Medicine Stock</string>
    <string name="download">Download</string>
    <string name="analisisRespon">Response Analysis</string>
    <string name="persentaseKepatuhan">Adherence Percentage</string>
    <string name="grafikKepatuhan">Adherence Chart</string>
    <string name="totalObatDiabaikan">Total Medication Ignored</string>
    <string name="totalObatDikonsumsi">Total Medication Taken</string>
    <string name="totalObatSnooze">Total Remind Me Later</string>
    <string name="noConsumptionData">No Medication Consumption Data Yet</string>
    <string name="tingkatKepatuhan">Medication Adherence Level</string>
    <string name="mingguan">Weekly</string>
    <string name="bulanan">Monthly</string>
    <string name="tahunan">Yearly</string>
    <string name="laporanStatistik">Statistical Report</string>
    <string name="saveChanges">Save Changes</string>
    <string name="ubahPengingat">Edit Reminder</string>
    <string name="tambahkan">Add</string>
    <string name="home_greeting">Hello, %1$s!</string>
    <string name="home_greeting_caregiver">Hello, %1$s</string>
    <string name="obat_default">Medication</string>
    <string name="jumlah_obat">%1$d Medication(s)</string>
    <string name="add_consumer">Add Consumer</string>
    <string name="remind_consumer">Remind Consumer</string>
    <string name="consumer_belum_ada_jadwal">Consumer has no schedule</string>
    <string name="adherence_rate">Adherence Rate</string>
    <string name="total_obat_terlewat">Total Medication Missed</string>
    <string name="total_obat_akan_datang">Total Upcoming Medication</string>
    <string name="general">General</string>
    <string name="document">Documents</string>
    <string name="riwayat">History</string>
    <string name="statistik">Statistics</string>
    <string name="list_consumer">Consumer List</string>
    <string name="tambah_pengingat">Add Reminder</string>
    <string name="tambah_appointment">Add Appointment</string>
    <string name="log_jadwal">History</string>
    <string name="jadwal_berikutnya">Next Schedule</string>
    <string name="stok_obat">Medicine Stock: </string>
    <string name="sudah_dikonsumsi">Already Taken</string>
    <string name="belum_ada_jadwal">No schedule yet</string>
    <string name="tambahkan_jadwal">Add Schedule</string>
    <string name="jadwal_hari_ini">Today Schedule</string>
    <string name="lihat_selengkapnya">See More</string>
    <string name="tidak_ada_jadwal_hari_ini">No schedule today.</string>
    <string name="ringkasan_statistik">Statistics Summary</string>
    <string name="belum_ada_data_konsumsi">No medication consumption data yet.</string>
    <string name="dosis_seharusnya">Scheduled Dose</string>
    <string name="dosis_dikonsumsi">Dose Taken</string>
    <string name="hari_ini">Today</string>
    <string name="besok">Tomorrow</string>
    <string name="sisa_stok">Remaining stock: %1$d</string>
    <string name="berhasil_dicatat">Recorded successfully</string>
    <string name="pengingat_terkirim">Reminder sent.</string>
    <string name="legend_dikonsumsi">● Taken</string>
    <string name="legend_snooze">● Remind Me Later</string>
    <string name="legend_ignored">● Ignored</string>
    <string name="legend_dikonsumsi_format">Taken (%1$d)</string>
    <string name="legend_snooze_format">Remind Me Later (%1$d)</string>
    <string name="legend_ignored_format">Ignored (%1$d)</string>
    <string name="mengingatkan_minum_obat">%1$s reminded you to take %2$s</string>
    <string name="caregiver">Caregiver</string>
    <string name="caregiver_description">Helps monitor Consumer adherence.</string>
    <string name="consumer">Consumer</string>
    <string name="consumer_description">Manages health reminders.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="kirim">Send</string>
    <string name="loading">Loading...</string>
    <string name="reminder_what">What reminder</string>
    <string name="message_placeholder">Message</string>
    <string name="sisa_stok_label">Remaining stock: </string>
    <string name="waktu">Time:</string>
    <string name="dikonsumsi">Taken</string>
    <string name="riwayat_konsumsi">Consumption History</string>
    <string name="nama_appointment">Appointment Name</string>
    <string name="dihadiri">Attended</string>
    <string name="medicine">Medicine</string>
    <string name="schedule">Schedule</string>
    <string name="appointment">Appointment</string>
    <string name="stok_hampir_habis">Your medicine is running low, please refill it soon!</string>
    <string name="terima">Accept</string>
    <string name="tolak">Reject</string>
    <string name="konfirmasi_pengingat">Reminder Confirmation</string>
    <string name="nama_obat">Medicine Name</string>
    <string name="status">Status</string>
    <string name="nama_lokasi">Location Name</string>
    <string name="sudah_diminum">Already Taken</string>
    <string name="tunda_pengingat">Snooze Reminder</string>
    <string name="masukkan_nama_obat">Enter your medicine name</string>
    <string name="frekuensi_minum_obat">Medication Frequency</string>
    <string name="pilih_frekuensi_minum_obat">Select your medication frequency</string>
    <string name="tanggal_selesai_minum_obat">Medication End Consumption Date</string>
    <string name="masukkan_jumlah_stok_obat">Enter your medicine stock quantity</string>
    <string name="save_reminder">Save Reminder</string>
    <string-array name="frekuensi_array">
        <item>Once daily</item>
        <item>Twice daily</item>
        <item>Three times daily</item>
        <item>Four times daily</item>
        <item>Five times daily</item>
        <item>Six times daily</item>
    </string-array>
    <string name="belum_ada_relasi">No relationships yet.</string>
    <string name="belum_ada_riwayat_konsumsi">No consumption history yet.</string>
    <string name="terlewatkan">Missed</string>
    <string name="belum_ada_riwayat_jadwal_temu">No appointment history yet.</string>
    <string name="semua">All</string>
    <string name="akan_datang">Upcoming</string>
    <string name="email_user">User Email</string>
    <string name="masukkan_email">Enter Email</string>
    <string name="kirim_undangan">Send Invitation</string>
    <string name="frekuensi">Frequency</string>
    <string name="perbarui_pengingat">Update Reminder</string>
    <string name="enter_password">Enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="simpan_appointment">Save Appointment</string>
    <string name="masukkan_nama_appointment">Enter your appointment name</string>
    <string name="lokasi_appointment">Appointment Location</string>
    <string name="masukkan_lokasi_appointment">Enter your appointment location</string>
    <string name="tanggal_appointment">Appointment Date</string>
    <string name="jam_appointment">Appointment Time</string>
    <string name="tambahkan_appointment">Add Appointment</string>
    <string name="welcome_signup">Welcome! Please Sign Up Here</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_email">Enter your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="hapus_jadwal_obat_title">Delete Medication Schedule</string>
    <string name="pilih_jenis_hapus_msg">Delete just this log entry, or the entire future schedule?</string>
    <string name="hapus_entri_ini_saja">This Entry Only</string>
    <string name="hapus_seluruh_jadwal">All Schedules</string>
</resources>