<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:id="@+id/headerSection">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:background="@drawable/ic_back"
            android:id="@+id/btnBack"
            android:layout_gravity="center"
            app:tint="@color/hover_pressed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPass"
            android:text="@string/forgotpass"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="?attr/colorOnSurface"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/headerSection"
        android:layout_marginHorizontal="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/email_section"
            android:layout_centerHorizontal="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="?attr/colorOnSurface"
                android:fontFamily="@font/inter_18pt_semibold"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                />


            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:hint="@string/enter_email"
                android:paddingStart="20dp"
                android:textColorHint="?attr/colorPrimaryInverse"
                android:textColor="?attr/colorPrimary"
                android:inputType="textEmailAddress"
                android:textSize="12sp"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKirim"
            android:text="@string/kirim"
            android:textColor="?attr/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/inter_18pt_medium"
            app:backgroundTint="?attr/colorSecondary"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</RelativeLayout>