<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:id="@+id/capsule_medicine_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@drawable/bg_left_offset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/nama_obat_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Antimo"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter_18pt_bold"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tvStok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sisa_stok_label"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:id="@+id/sisa_stok_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_marginLeft="2dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvWaktu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        android:layout_marginEnd="2dp"
                        />

                    <TextView
                        android:id="@+id/scheduled_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="timestamp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="12sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/curr_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dikonsumsi"
                android:background="@drawable/bg_status"
                android:backgroundTint="@color/green"
                android:paddingVertical="6dp"
                android:paddingHorizontal="24dp"
                android:textSize="12sp"
                android:textColor="?attr/colorPrimary"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>